SplashScreen, rada buggy

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,8 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.AbsoluteLayout.jar=D:\\Project\\Random\\Java\\E-Vote\\dist\\lib\\AbsoluteLayout.jar
+file.reference.sqlite-jdbc-3.27.2.1.jar=D:\\Project\\Desktop\\Java\\sqlite-jdbc-3.27.2.1.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\AlvaroDwi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
