Mengubah beberapa file untuk konfigurasi fungsi vote

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,14 +30,18 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=C:\\Users\\Septian Ricky M\\Downloads\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-1=C:\\Users\\Septian Ricky M\\Downloads\\AbsoluteLayout.jar
 file.reference.sqlite-jdbc-3.27.2.1.jar=C:\\Users\\Septian Ricky M\\Downloads\\sqlite-jdbc-3.27.2.1.jar
+file.reference.sqlite-jdbc-3.27.2.1.jar-1=C:\\Users\\Septian Ricky M\\Downloads\\sqlite-jdbc-3.27.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.SqLiteDriver.classpath}:\
     ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.sqlite-jdbc-3.27.2.1.jar}
+    ${file.reference.sqlite-jdbc-3.27.2.1.jar}:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.sqlite-jdbc-3.27.2.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
